[build-system]
requires = [
    "setuptools>=76.0",
    "setuptools-scm[toml]>=8.2",
    "setuptools-scm-git-archive",
    "wheel",
    "setuptools-rust>=1.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "scalib"
authors = [{ name = "SCALib contributors", email = "info@simple-crypto.org" }]
maintainers = [
    { name = "Gaëtan Cassiers", email = "gaetan.cassiers@uclouvain.be" },
]
description = "Side-Channel Analysis Library"
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "GNU AGPL 3.0" }
# Waiting for setuptools to support PEP639
#license = "AGPL-3.0-only"
#license-files = ["COPYRIGHT", "COPYING"]
dynamic = ["version"]
dependencies = ["numpy >=1.26.0,<3"]

[project.urls]
Homepage = "https://github.com/simple-crypto/SCALib"
Documentation = "https://https://scalib.readthedocs.io/"
Repository = "https://github.com/simple-crypto/SCALib.git"
Issues = "https://github.com/simple-crypto/SCALib/issues"
Changelog = "https://github.com/simple-crypto/SCALib/blob/main/CHANGELOG.rst"


[tool.setuptools_scm]
version_file = "src/scalib/version.py"

[tool.pytest.ini_options]
addopts = ["--cov=scalib", "--doctest-modules", "-ra", "--pyargs"]
testpaths = ["tests", "scalib", "examples"]

[tool.cibuildwheel]
manylinux-x86_64-image = "ghcr.io/simple-crypto/manylinux_2_28_x86_64-clang:rust-1.85.0"
build-verbosity = 1
build = ["cp310-*"]
skip = ["*musllinux*"]
archs = "auto64"
environment-pass = ["CARGO_TARGET_DIR", "CARGO_HOME"]
[tool.cibuildwheel.environment]
RUST_BACKTRACE = "full"
SCALIB_X86_64_V3 = "1"
