[metadata]
name = scaffe
description = Side-Channel Attacks and Leakage Evaluation.
long_description = file: README.rst
long_description_content_type = text/rst
url = https://github.com/scaffe-sca/scaffe
author= Olivier Bronchain, Gaëtan Cassiers
author_email = olivier.bronchain@uclouvain.be gaetan.cassiers@uclouvain.be
license = GNU AGPL v3+
#license_file = LICENSE # TODO

[options]

package_dir =
    =src
packages = find:
zip_safe = False

python_requires = >=3.6
install_requires =
        numpy~=1.19.1
        tqdm~=4.38
        scipy~=1.5.2
        scikit-learn~=0.23.1
setup_requires = setuptools_scm

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest >= 6.2.2
    pytest-cov >= 2.11.1
docs =
    pydata-sphinx-theme >= 0.5.2
    sphinx >= 3.5.3
    numpydoc >= 1.1.0
    matplotlib >= 3.4.1
    ipython >= 7.22.0

[aliases]
test=pytest

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[bdist_wheel]
py-limited-api = cp36
