[metadata]
name = scalib
description = Side-Channel Analysis Library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/simple-crypto/scalib
author= Olivier Bronchain, Gaëtan Cassiers
author_email = olivier.bronchain@uclouvain.be, gaetan.cassiers@uclouvain.be
license = GNU AGPL v3+
license_file = COPYING

[options]

package_dir =
    =src
packages = find:
zip_safe = False

python_requires = >=3.6
install_requires =
        numpy~=1.19.1

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest ~= 6.2.2
    pytest-cov ~= 2.11.1
    scikit-learn~=0.23.1
    scipy~=1.5.2

[aliases]
test=pytest

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[bdist_wheel]
py-limited-api = cp36
