[workspace]

members = [
    "scalib",
    "ranklib",
    "scalib-py"
]
resolver = "2"

[patch.crates-io]
numpy = { git = 'https://github.com/cassiersg/rust-numpy', branch = 'upgrade-ndarray' }
ndarray-stats = { git = 'https://github.com/cassiersg/ndarray-stats', branch = 'ndarray-0.15' }
ndarray-linalg = { git = 'https://github.com/cassiersg/ndarray-linalg', branch = 'upgrade-ndarray' }

[profile.release]
debug = true
