[package]
name = "scale-py"
version = "0.1.0"
authors = [
    "Olivier Bronchain <olivier.bronchain@uclouvain.be>",
    "Gaëtan Cassiers <gaetan.cassiers@uclouvain.be>"
]
edition = "2018"

[lib]
name = "scale_py"
crate-type = ["cdylib"]

[features]
ntl = ["ranklib/ntl"]
hellib = ["ranklib/hellib"]
openblas-system = ["openblas-src/system"]

[dependencies]
ndarray = { version = "0.15.1", features = ["rayon","blas"] }
blas-src = { version = "0.8", default-features = false, features = ["openblas"] }
numpy = "0.13.0"
indicatif = "0.15.0"

[dependencies.openblas-src]
version = "0.10.4"
features = ["static"]

# sytem mandantory on windows
[target.'cfg(windows)'.dependencies.openblas-src]
version = "0.10.4"
features = ["static", "system"]

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

[dependencies.ranklib]
path = "../ranklib"

[dependencies.scale]
path = "../scale"
