[package]
name = "ranklib"
version = "0.1.0"
authors = ["Gaëtan Cassiers <gaetan.cassiers@uclouvain.be>"]
edition = "2018"

[features]
ntl = []
hellib = []

[dependencies]
itertools = "0.10"
arbitrary = { version = "0.4", features = ["derive"], optional = true }
realfft = "1.0"

[build-dependencies]
cc = "1.0"
bindgen = "0.58"

