[package]
name = "ranklib"
version = "0.1.0"
authors = ["Gaëtan Cassiers <gaetan.cassiers@uclouvain.be>"]
edition = "2021"

[features]
ntl = []
hellib = []

[dependencies]
itertools = "0.10"
arbitrary = { version = "1.2", features = ["derive"], optional = true }
realfft = "3.2"

[build-dependencies]
cc = "1.0"
bindgen = "0.64"

