[package]
name = "ranklib"
version = "0.1.0"
authors = ["Gaëtan Cassiers <gaetan.cassiers@uclouvain.be>"]
edition = "2021"

[features]
ntl = []
hellib = []

[dependencies]
itertools = "0.14"
arbitrary = { version = "1.4", features = ["derive"], optional = true }
realfft = "3.4"

[build-dependencies]
cc = "1.2.6"
bindgen = "0.71.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
