[package]
name = "scalib-py"
version = "0.1.0"
authors = [
    "Olivier Bronchain <olivier.bronchain@uclouvain.be>",
    "Gaëtan Cassiers <gaetan.cassiers@uclouvain.be>"
]
edition = "2018"

[lib]
name = "scalib_py"
crate-type = ["cdylib"]

[features]
ntl = ["ranklib/ntl"]
hellib = ["ranklib/hellib"]
blis = ["scalib/blis"]

[dependencies]
rayon = "1.5.0"
ndarray = { version = "0.15.1", features = ["rayon"] }
numpy = "0.18.0"
indicatif = "0.17.3"
num_cpus = "1.15.0"
bincode = "1.3.3" # Serialization for pickle support

[dependencies.pyo3]
version = "0.18.0"
features = ["extension-module"]

[dependencies.ranklib]
path = "../ranklib"

[dependencies.scalib]
path = "../scalib"
