[package]
name = "scalib-py"
version = "0.1.0"
authors = [
    "Olivier Bronchain <olivier.bronchain@uclouvain.be>",
    "Gaëtan Cassiers <gaetan.cassiers@uclouvain.be>",
]
edition = "2021"

[lib]
name = "scalib_py"
crate-type = ["cdylib"]

[features]
ntl = ["ranklib/ntl"]
hellib = ["ranklib/hellib"]
blis = ["scalib/blis"]

[dependencies]
rayon = "1.10"
ndarray = { version = "0.16.1", features = ["rayon", "serde"] }
numpy = "0.23.0"
indicatif = "0.17"
num_cpus = "1.16"
serde = { version = "1.0" }
bincode = "1.3.3"                                               # Serialization for pickle support

[dependencies.pyo3]
version = "0.23.3"
features = ["extension-module", "abi3-py310"]

[dependencies.ranklib]
path = "../ranklib"

[dependencies.scalib]
path = "../scalib"
