[package]
name = "rust_stella"
version = "0.1.0"
authors = ["obronchain <olivier.bronchain@uclouvain.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_stella"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8.5"
features = ["extension-module"]

[dependencies]
numpy = "0.7.0"
rayon = "1.3.0"
num-integer = "0.1.42"
ndarray = { version = "0.13.0", features = ["rayon"] }
#blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
#openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }

#[dependencies.ndarray]
#version = "0.13"
#features = ["rayon"]

[profile.release]
debug = true
