[package]
name = "rust_stella"
version = "0.1.0"
authors = ["obronchain <olivier.bronchain@uclouvain.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_stella"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
numpy = "0.13.0"
rayon = "1.3.0"
num-integer = "0.1.42"
ndarray = { version = "0.14.0", features = ["rayon"] }

[profile.release]
debug = true
