[package]
name = "rust_stella"
version = "0.1.0"
authors = ["obronchain <olivier.bronchain@uclouvain.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_stella"
crate-type = ["cdylib"]
bench = false

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
numpy = "0.13.0"
rayon = "1.5.0"
num-integer = "0.1.42"
indicatif = "0.15.0"
ndarray = { version = "0.14.0", features = ["rayon","blas"] }
itertools = "0.10.0"
ndarray-stats = "0.4.0"
#GSL = "2.0.0"
blas-src = { version = "0.6.1", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.9", default-features = false, features = ["cblas","system"] }

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "belief_propagation"
harness = false
