[package]
name = "ranklib"
version = "0.1.0"
authors = ["Gaëtan Cassiers <gaetan.cassiers@uclouvain.be>"]
edition = "2018"

[features]
ntl = []
hellib = []

[dependencies]
libc = "0.2"
itertools = "0.10"
lazy_static = "1.4.0"
arbitrary = { version = "0.4", features = ["derive"] }
realfft = "1.0"
snafu = "0.6"

[build-dependencies]
cc = "1.0"
bindgen = "0.53"

